<resources>
    <string name="app_name">Calc</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="base_mod">base mod</string>
    <string name="scientific_mod">scientific mod</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="point">,</string>
    <string name="zero">0</string>
    <string name="delete">Del</string>
    <string name="mult">&#215;</string>
    <string name="div">&#247;</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="result">=</string>
</resources>
